Estrutura HTML pura

--- a/index.html
+++ b/index.html
@@ -3,8 +3,124 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Acervo materiais educativos</title>
+	<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+	<script src="js/jquery.js"></script>
+	<script src="js/bootstrap.min.js"></script>
 </head>
 <body>
-	
+	<div class="container-fluid">
+		<nav class="menu">
+			<div class="col-md-12">
+				<img src="images/logo.png" />
+				<ul>
+					<li><a href="#">SOBRE</a></li>
+					<li><a href="#">CURSOS</a></li>
+					<li><a href="#">CONTATO</a></li>
+				</ul>
+			</div>
+		</nav><!--MENU-->
+		<div class="main-header">
+			<h1>MATERIAIS EDUCATIVOS PARA VOCÊ SE QUALIFICAR CADA VEZ MAIS NA ÁREA ELÉTRICA</h1>
+			<h3>BAIXE GRATUITAMENTE OS MELHORES CONTEÚDOS DA SALA DA ELÉTRICA PARA TURBINAR CADA VEZ MAIS O PODER DO SEU CONHECIMENTO</h3>
+			<span>COMPARTILHAR É SE IMPORTAR</span>
+			<ul>
+				<li>
+					<div href="#">FACE</div>
+					<div href="#">LINKEDIN</div>
+					<div href="#">GOOGLE+</div>
+					<div href="#">TWITTER</div>
+				</li>
+			</ul>
+		</div><!-- MAIN HEADER -->
+		<section id="ebooks">
+			<p>E-BOOKS</p>
+
+			<div class="col-md-6" class="box-ebook">
+				<div class="col-md-2">
+					
+				</div>
+				<div class="col-md-4">
+					<h3>NOME DO E-BOOK</h3>
+					<p>Por: Engº Everton Moraes</p>
+					<p>27 páginas</p>
+					<button>BAIXAR E-BOOK GRÁTIS</button>
+				</div>
+			</div><!-- box-ebook -->
+
+			<div class="col-md-6" class="box-ebook">
+				<div class="col-md-2">
+					
+				</div>
+				<div class="col-md-4">
+					<h3>NOME DO E-BOOK</h3>
+					<p>Por: Engº Everton Moraes</p>
+					<p>27 páginas</p>
+					<button>BAIXAR E-BOOK GRÁTIS</button>
+				</div>
+			</div><!-- box-ebook -->
+
+		</section><!-- SECTION EBOOKS -->
+		
+		<section id="softwares">
+			<p>SOFTWARES</p>
+
+			<div class="col-md-3" class="box-softwares">
+				<p>SOFTWARE</p>
+				<h3>NOME DO SOFTWARE</h3>
+				<img src="img/software.png" />
+				<button>DOWNLOAD</button>
+			</div><!-- box-softwares -->
+
+			<div class="col-md-3" class="box-softwares">
+				<p>SOFTWARE</p>
+				<h3>NOME DO SOFTWARE</h3>
+				<img src="img/software.png" />
+				<button>DOWNLOAD</button>
+			</div><!-- box-softwares -->
+
+			<div class="col-md-3" class="box-softwares">
+				<p>SOFTWARE</p>
+				<h3>NOME DO SOFTWARE</h3>
+				<img src="img/software.png" />
+				<button>DOWNLOAD</button>
+			</div><!-- box-softwares -->
+
+			<div class="col-md-3" class="box-softwares">
+				<p>SOFTWARE</p>
+				<h3>NOME DO SOFTWARE</h3>
+				<img src="img/software.png" />
+				<button>DOWNLOAD</button>
+			</div><!-- box-softwares -->
+		</section><!-- SECTION SOFTWARES -->
+
+		<section id="webinars">
+			<p>WEBINAR</p>
+
+			<div class="col-md-4" class="box-webinars">
+				<img src="img/webinar.png" />
+				<h3>ASSUNTO DO WEBINAR</h3>
+				<p>Por: Engº Everton Moraes</p>
+			</div><!-- box-webinars -->
+
+			<div class="col-md-4" class="box-webinars">
+				<img src="img/webinar.png" />
+				<h3>ASSUNTO DO WEBINAR</h3>
+				<p>Por: Engº Everton Moraes</p>
+			</div><!-- box-webinars -->
+
+		</section><!-- SECTION WEBINAR -->
+
+	</div><!-- CONTAINER FLUID -->
+	<div class="footer">
+		<img src="images/logo.png" />
+		<ul>
+			<li>
+				<div href="#">FACE</div>
+				<div href="#">LINKEDIN</div>
+				<div href="#">GOOGLE+</div>
+				<div href="#">TWITTER</div>
+			</li>
+		</ul>
+	</div>
 </body>
 </html>
