--- a/index.html
+++ b/index.html
@@ -4,62 +4,77 @@
 	<meta charset="UTF-8">
 	<title>Acervo materiais educativos</title>
 	<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+	<link href="css/style.css" rel="stylesheet" type="text/css" />
 	<script src="js/jquery.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 </head>
 <body>
 	<div class="container-fluid">
-		<nav class="menu">
-			<div class="col-md-12">
-				<img src="images/logo.png" />
+		<div class="row menu ">
+			<nav class="padding-padrao">				
+					<div class="col-md-12">
+						<img src="images/logo-sde.png" />
+						<ul>
+							<li><a href="#">SOBRE</a></li>
+							<li><a href="#">CURSOS</a></li>
+							<li><a href="#">CONTATO</a></li>
+						</ul>
+					</div>
+			</nav><!--MENU-->
+		</div>
+
+		<div class="row">
+			<div class="main-header col-md-12 padding-padrao">
+				<h1>MATERIAIS EDUCATIVOS PARA VOCÊ SE QUALIFICAR CADA VEZ MAIS NA ÁREA ELÉTRICA</h1>
+				<h3>BAIXE GRATUITAMENTE OS MELHORES CONTEÚDOS DA SALA DA ELÉTRICA PARA TURBINAR CADA VEZ MAIS O PODER DO SEU CONHECIMENTO</h3>
+				<p>COMPARTILHAR É SE IMPORTAR</p>
 				<ul>
-					<li><a href="#">SOBRE</a></li>
-					<li><a href="#">CURSOS</a></li>
-					<li><a href="#">CONTATO</a></li>
+					<li><a href="#"><img src="images/fb-icon.png" alt=""></a></li>
+					<li><a href="#"><img src="images/linkedin-icon.png" alt=""></a></li>
+					<li><a href="#"><img src="images/googleplus-icon.png" alt=""></a></li>
+					<li><a href="#"><img src="images/twitter-icon.png" alt=""></a></li>
 				</ul>
-			</div>
-		</nav><!--MENU-->
-		<div class="main-header">
-			<h1>MATERIAIS EDUCATIVOS PARA VOCÊ SE QUALIFICAR CADA VEZ MAIS NA ÁREA ELÉTRICA</h1>
-			<h3>BAIXE GRATUITAMENTE OS MELHORES CONTEÚDOS DA SALA DA ELÉTRICA PARA TURBINAR CADA VEZ MAIS O PODER DO SEU CONHECIMENTO</h3>
-			<span>COMPARTILHAR É SE IMPORTAR</span>
-			<ul>
-				<li>
-					<div href="#">FACE</div>
-					<div href="#">LINKEDIN</div>
-					<div href="#">GOOGLE+</div>
-					<div href="#">TWITTER</div>
-				</li>
-			</ul>
-		</div><!-- MAIN HEADER -->
-		<section id="ebooks">
-			<p>E-BOOKS</p>
+			</div><!-- MAIN HEADER -->
+		</div>
 
-			<div class="col-md-6" class="box-ebook">
-				<div class="col-md-2">
-					
-				</div>
-				<div class="col-md-4">
-					<h3>NOME DO E-BOOK</h3>
-					<p>Por: Engº Everton Moraes</p>
-					<p>27 páginas</p>
-					<button>BAIXAR E-BOOK GRÁTIS</button>
-				</div>
-			</div><!-- box-ebook -->
+		<div class="row">
+			<section id="ebooks" class="padding-padrao">
+				<p>E-BOOKS</p>
+			
+				<div class="col-md-6 box-ebook">
+					<div class="row">
+						<div class="col-md-6">
+							<img src="images/ebook-partida-estrela-triangulo.png">
+						</div>
+						<div class="col-md-6">
+							<h3>PARTIDA ESTRELA TRIÂNGULO</h3>
+							<p><strong>Por:</strong> Engº Everton Moraes</p>
+							<p><strong>Páginas:</strong> 27 páginas</p>
+							<p><strong>Versão:</strong> 1.0</p>
+							<a href="#" target="_blank" class="btn btn-success">BAIXAR E-BOOK GRÁTIS</a>
+						</div>
+					</div>
+				</div><!-- box-ebook -->
 
-			<div class="col-md-6" class="box-ebook">
-				<div class="col-md-2">
-					
-				</div>
-				<div class="col-md-4">
-					<h3>NOME DO E-BOOK</h3>
-					<p>Por: Engº Everton Moraes</p>
-					<p>27 páginas</p>
-					<button>BAIXAR E-BOOK GRÁTIS</button>
-				</div>
-			</div><!-- box-ebook -->
+				<div class="col-md-6 box-ebook">
+					<div class="row">
+						<div class="col-md-6">
+							<img src="images/ebook-3-motivos.png">
+						</div>
+						<div class="col-md-6">
+							<h3>3 MOTIVOS PORTAL SCHNEIDER</h3>
+							<p><strong>Por:</strong> Engº Everton Moraes</p>
+							<p><strong>Páginas:</strong> 27 páginas</p>
+							<p><strong>Versão:</strong> 1.0</p>
+							<a href="#" target="_blank" class="btn btn-success">BAIXAR E-BOOK GRÁTIS</a>
+						</div>
+					</div>
+				</div><!-- box-ebook -->
 
-		</section><!-- SECTION EBOOKS -->
+
+
+			</section><!-- SECTION EBOOKS -->
+		</div>
 		
 		<section id="softwares">
 			<p>SOFTWARES</p>
