Fotos dos ebooks e sections estruturadas

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Acervo materiais educativos</title>
 	<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 	<link href="css/style.css" rel="stylesheet" type="text/css" />
@@ -37,104 +38,234 @@
 			</div><!-- MAIN HEADER -->
 		</div>
 
-		<div class="row">
+		<div class="row deptos">
 			<section id="ebooks" class="padding-padrao">
 				<p>E-BOOKS</p>
 			
-				<div class="col-md-6 box-ebook">
+				<div class="col-md-6 box-ebook col-xs-12">
 					<div class="row">
 						<div class="col-md-6">
 							<img src="images/ebook-partida-estrela-triangulo.png">
 						</div>
-						<div class="col-md-6">
+						<div class="col-md-6 teste">
 							<h3>PARTIDA ESTRELA TRIÂNGULO</h3>
 							<p><strong>Por:</strong> Engº Everton Moraes</p>
 							<p><strong>Páginas:</strong> 27 páginas</p>
 							<p><strong>Versão:</strong> 1.0</p>
+						</div>
+						<div class="col-md-6 content-action">
 							<a href="#" target="_blank" class="btn btn-success">BAIXAR E-BOOK GRÁTIS</a>
 						</div>
 					</div>
 				</div><!-- box-ebook -->
 
-				<div class="col-md-6 box-ebook">
+				<div class="col-md-6 col-xs-12 box-ebook">
+					<div class="row">
+						<div class="col-md-6">
+							<img src="images/ebook-grau-de-protecao.png">
+						</div>
+						<div class="col-md-6 content-box-ebook">
+							<h3>GRAU DE PROTEÇÃO</h3>
+							<p><strong>Por:</strong> Engº Everton Moraes</p>
+							<p><strong>Páginas:</strong> 27 páginas</p>
+							<p><strong>Versão:</strong> 1.0</p>
+						</div>
+						<div class="col-md-6 content-action">
+							<a href="#" target="_blank" class="btn btn-success">BAIXAR E-BOOK GRÁTIS</a>
+						</div>
+					</div>
+				</div><!-- box-ebook -->
+
+				<div class="col-md-6 col-xs-12 box-ebook">
+					<div class="row">
+						<div class="col-md-6">
+							<img src="images/ebook-10-partidas-de-motores.png">
+						</div>
+						<div class="col-md-6 content-box-ebook">
+							<h3>AS 10 PARTIDAS DE MOTORES</h3>
+							<p><strong>Por:</strong> Engº Everton Moraes</p>
+							<p><strong>Páginas:</strong> 27 páginas</p>
+							<p><strong>Versão:</strong> 1.0</p>
+						</div>
+						<div class="col-md-6 content-action">
+							<a href="#" target="_blank" class="btn btn-success">BAIXAR E-BOOK GRÁTIS</a>
+						</div>
+					</div>
+				</div><!-- box-ebook -->
+
+				<div class="col-md-6 col-xs-12 box-ebook">
+					<div class="row">
+						<div class="col-md-6">
+							<img src="images/ebook-cbs.png">
+						</div>
+						<div class="col-md-6 content-box-ebook">
+							<h3>AS 6 CORES DE BOTÕES E SINALEIROS</h3>
+							<p><strong>Por:</strong> Engº Everton Moraes</p>
+							<p><strong>Páginas:</strong> 27 páginas</p>
+							<p><strong>Versão:</strong> 1.0</p>
+						</div>
+						<div class="col-md-6 content-action">
+							<a href="#" target="_blank" class="btn btn-success">BAIXAR E-BOOK GRÁTIS</a>
+						</div>
+					</div>
+				</div><!-- box-ebook -->
+
+				<div class="col-md-6 col-xs-12 box-ebook">
+					<div class="row">
+						<div class="col-md-6">
+							<img src="images/ebook-velocidade-do-motor-eletrico-trifasico.png">
+						</div>
+						<div class="col-md-6 content-box-ebook">
+							<h3>VELOCIDADE DO MOTOR ELÉTRICO TRIFÁSICO</h3>
+							<p><strong>Por:</strong> Engº Everton Moraes</p>
+							<p><strong>Páginas:</strong> 27 páginas</p>
+							<p><strong>Versão:</strong> 1.0</p>
+						</div>
+						<div class="col-md-6 content-action">
+							<a href="#" target="_blank" class="btn btn-success">BAIXAR E-BOOK GRÁTIS</a>
+						</div>
+					</div>
+				</div><!-- box-ebook -->
+
+				<div class="col-md-6 col-xs-12 box-ebook">
+					<div class="row">
+						<div class="col-md-6">
+							<img src="images/ebook-inversor-de-frequencia.png">
+						</div>
+						<div class="col-md-6 content-box-ebook">
+							<h3>INVERSOR DE FREQUÊNCIA</h3>
+							<p><strong>Por:</strong> Engº Everton Moraes</p>
+							<p><strong>Páginas:</strong> 27 páginas</p>
+							<p><strong>Versão:</strong> 1.0</p>
+						</div>
+						<div class="col-md-6 content-action">
+							<a href="#" target="_blank" class="btn btn-success">BAIXAR E-BOOK GRÁTIS</a>
+						</div>
+					</div>
+				</div><!-- box-ebook -->
+
+				<div class="col-md-6 col-xs-12 box-ebook">
+					<div class="row">
+						<div class="col-md-6">
+							<img src="images/ebook-nbr-5410.png">
+						</div>
+						<div class="col-md-6 content-box-ebook">
+							<h3>NBR 5410</h3>
+							<p><strong>Por:</strong> Engº Everton Moraes</p>
+							<p><strong>Páginas:</strong> 27 páginas</p>
+							<p><strong>Versão:</strong> 1.0</p>
+						</div>
+						<div class="col-md-6 content-action">
+							<a href="#" target="_blank" class="btn btn-success">BAIXAR E-BOOK GRÁTIS</a>
+						</div>
+					</div>
+				</div><!-- box-ebook -->
+
+				<div class="col-md-6 col-xs-12 box-ebook">
+					<div class="row">
+						<div class="col-md-6">
+							<img src="images/ebook-dimensionamento-de-eletrodutos.png">
+						</div>
+						<div class="col-md-6 content-box-ebook">
+							<h3>DIMENSIONAMENTO DE ELETRODUTOS</h3>
+							<p><strong>Por:</strong> Engº Everton Moraes</p>
+							<p><strong>Páginas:</strong> 27 páginas</p>
+							<p><strong>Versão:</strong> 1.0</p>
+						</div>
+						<div class="col-md-6 content-action">
+							<a href="#" target="_blank" class="btn btn-success">BAIXAR E-BOOK GRÁTIS</a>
+						</div>
+					</div>
+				</div><!-- box-ebook -->
+
+				<div class="col-md-6 col-xs-12 box-ebook">
 					<div class="row">
 						<div class="col-md-6">
 							<img src="images/ebook-3-motivos.png">
 						</div>
-						<div class="col-md-6">
+						<div class="col-md-6 content-box-ebook">
 							<h3>3 MOTIVOS PORTAL SCHNEIDER</h3>
 							<p><strong>Por:</strong> Engº Everton Moraes</p>
 							<p><strong>Páginas:</strong> 27 páginas</p>
 							<p><strong>Versão:</strong> 1.0</p>
+						</div>
+						<div class="col-md-6 content-action">
 							<a href="#" target="_blank" class="btn btn-success">BAIXAR E-BOOK GRÁTIS</a>
 						</div>
 					</div>
 				</div><!-- box-ebook -->
-
-
-
 			</section><!-- SECTION EBOOKS -->
 		</div>
 		
-		<section id="softwares">
-			<p>SOFTWARES</p>
 
-			<div class="col-md-3" class="box-softwares">
-				<p>SOFTWARE</p>
-				<h3>NOME DO SOFTWARE</h3>
-				<img src="img/software.png" />
-				<button>DOWNLOAD</button>
-			</div><!-- box-softwares -->
+		<div class="row deptos">
+			<section id="softwares" class="padding-padrao">
+				<p>SOFTWARES</p>
 
-			<div class="col-md-3" class="box-softwares">
-				<p>SOFTWARE</p>
-				<h3>NOME DO SOFTWARE</h3>
-				<img src="img/software.png" />
-				<button>DOWNLOAD</button>
-			</div><!-- box-softwares -->
+				<div class="col-md-3 box-softwares">
+					<p>SOFTWARE</p>
+					<h3>CADe SIMU 3.0</h3><br>
+					<img src="images/software.png" />
+					<a href="#" target="_blank" class="btn btn-success btn-download"><i class="glyphicon glyphicon-download-alt"></i> DOWNLOAD</a>
+				</div><!-- box-softwares -->
 
-			<div class="col-md-3" class="box-softwares">
-				<p>SOFTWARE</p>
-				<h3>NOME DO SOFTWARE</h3>
-				<img src="img/software.png" />
-				<button>DOWNLOAD</button>
-			</div><!-- box-softwares -->
+				<div class="col-md-3 box-softwares">
+					<p>SOFTWARE</p>
+					<h3>PLANILHA DE ORÇAMENTOS</h3>
+					<img src="images/software.png" />
+					<a href="#" target="_blank" class="btn btn-success btn-download"><i class="glyphicon glyphicon-download-alt"></i> DOWNLOAD</a>
+				</div><!-- box-softwares -->
 
-			<div class="col-md-3" class="box-softwares">
-				<p>SOFTWARE</p>
-				<h3>NOME DO SOFTWARE</h3>
-				<img src="img/software.png" />
-				<button>DOWNLOAD</button>
-			</div><!-- box-softwares -->
-		</section><!-- SECTION SOFTWARES -->
+				<div class="col-md-3 box-softwares">
+					<p>SOFTWARE</p>
+					<h3>CHECKLIST DO ELETRICISTA</h3>
+					<img src="images/software.png" />
+					<a href="#" target="_blank" class="btn btn-success btn-download"><i class="glyphicon glyphicon-download-alt"></i> DOWNLOAD</a>
+				</div><!-- box-softwares -->
 
-		<section id="webinars">
-			<p>WEBINAR</p>
+				<div class="col-md-3 box-softwares">
+					<p>SOFTWARE</p>
+					<h3>PC SIMU</h3><br>
+					<img src="images/software.png" />
+					<a href="#" target="_blank" class="btn btn-success btn-download"><i class="glyphicon glyphicon-download-alt"></i> DOWNLOAD</a>
+				</div><!-- box-softwares -->
+			</section><!-- SECTION SOFTWARES -->
+		</div>
 
-			<div class="col-md-4" class="box-webinars">
-				<img src="img/webinar.png" />
-				<h3>ASSUNTO DO WEBINAR</h3>
-				<p>Por: Engº Everton Moraes</p>
-			</div><!-- box-webinars -->
+		<div class="row deptos">
+			<section id="webinars" class="padding-padrao">
+				<p>WEBINAR</p>
 
-			<div class="col-md-4" class="box-webinars">
-				<img src="img/webinar.png" />
-				<h3>ASSUNTO DO WEBINAR</h3>
-				<p>Por: Engº Everton Moraes</p>
-			</div><!-- box-webinars -->
+				<div class="col-md-1"></div>
+				<div class="col-md-5 box-webinars">
+					<img src="images/webinar.png" />
+					<h3>ASSUNTO DO WEBINAR</h3>
+					<p>Por: Engº Everton Moraes</p>
+					<div class="action-align">
+						<a href="#" target="_blank" class="btn btn-success">ASSISTIR GRATUITAMENTE</a>
+					</div>
+				</div><!-- box-webinars -->
 
-		</section><!-- SECTION WEBINAR -->
+				<div class="col-md-5 box-webinars">
+					<img src="images/webinar.png" />
+					<h3>ASSUNTO DO WEBINAR</h3>
+					<p>Por: Engº Everton Moraes</p>
+					<div class="action-align">
+						<a href="#" target="_blank" class="btn btn-success">ASSISTIR GRATUITAMENTE</a>
+					</div>
+				</div><!-- box-webinars -->
+				<div class="col-md-1"></div>
+			</section><!-- SECTION WEBINAR -->
+		</div>
 
 	</div><!-- CONTAINER FLUID -->
 	<div class="footer">
-		<img src="images/logo.png" />
+		<img src="images/logo-sde.png" />
 		<ul>
-			<li>
-				<div href="#">FACE</div>
-				<div href="#">LINKEDIN</div>
-				<div href="#">GOOGLE+</div>
-				<div href="#">TWITTER</div>
-			</li>
+			<li><a href="#"><img src="images/fb-icon.png" alt=""></a></li>
+			<li><a href="#"><img src="images/linkedin-icon.png" alt=""></a></li>
+			<li><a href="#"><img src="images/googleplus-icon.png" alt=""></a></li>
+			<li><a href="#"><img src="images/twitter-icon.png" alt=""></a></li>
 		</ul>
 	</div>
 </body>
