Novas imagens adicionadas e H3 corrigido

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<div class="row">
 			<div class="main-header col-md-12 padding-padrao">
 				<h1>MATERIAIS EDUCATIVOS PARA VOCÊ SE QUALIFICAR CADA VEZ MAIS NA ÁREA ELÉTRICA</h1>
-				<h3>BAIXE GRATUITAMENTE OS MELHORES CONTEÚDOS DA SALA DA ELÉTRICA PARA TURBINAR CADA VEZ MAIS O PODER DO SEU CONHECIMENTO</h3>
+				<!-- <h3>BAIXE GRATUITAMENTE OS MELHORES CONTEÚDOS DA SALA DA ELÉTRICA PARA TURBINAR CADA VEZ MAIS O PODER DO SEU CONHECIMENTO</h3> -->
 				<p>COMPARTILHAR É SE IMPORTAR</p>
 				<ul>
 					<li><a href="#"><img src="images/fb-icon.png" alt=""></a></li>
@@ -182,6 +182,23 @@
 				<div class="col-md-6 col-xs-12 box-ebook">
 					<div class="row">
 						<div class="col-md-6">
+							<img src="images/ebook-soft-starter.png">
+						</div>
+						<div class="col-md-6 content-box-ebook">
+							<h3>SOFT STARTER</h3>
+							<p><strong>Por:</strong> Engº Everton Moraes</p>
+							<p><strong>Páginas:</strong> 27 páginas</p>
+							<p><strong>Versão:</strong> 1.0</p>
+						</div>
+						<div class="col-md-6 content-action">
+							<a href="#" target="_blank" class="btn btn-success">BAIXAR E-BOOK GRÁTIS</a>
+						</div>
+					</div>
+				</div><!-- box-ebook -->
+
+				<div class="col-md-6 col-xs-12 box-ebook">
+					<div class="row">
+						<div class="col-md-6">
 							<img src="images/ebook-3-motivos.png">
 						</div>
 						<div class="col-md-6 content-box-ebook">
@@ -206,28 +223,28 @@
 				<div class="col-md-3 box-softwares">
 					<p>SOFTWARE</p>
 					<h3>CADe SIMU 3.0</h3><br>
-					<img src="images/software.png" />
+					<img src="images/software-cade-simu-30.png" />
 					<a href="#" target="_blank" class="btn btn-success btn-download"><i class="glyphicon glyphicon-download-alt"></i> DOWNLOAD</a>
 				</div><!-- box-softwares -->
 
 				<div class="col-md-3 box-softwares">
 					<p>SOFTWARE</p>
 					<h3>PLANILHA DE ORÇAMENTOS</h3>
-					<img src="images/software.png" />
+					<img src="images/software-planilha-de-orcamentos.png" />
 					<a href="#" target="_blank" class="btn btn-success btn-download"><i class="glyphicon glyphicon-download-alt"></i> DOWNLOAD</a>
 				</div><!-- box-softwares -->
 
 				<div class="col-md-3 box-softwares">
 					<p>SOFTWARE</p>
 					<h3>CHECKLIST DO ELETRICISTA</h3>
-					<img src="images/software.png" />
+					<img src="images/software-check-list.png" />
 					<a href="#" target="_blank" class="btn btn-success btn-download"><i class="glyphicon glyphicon-download-alt"></i> DOWNLOAD</a>
 				</div><!-- box-softwares -->
 
 				<div class="col-md-3 box-softwares">
 					<p>SOFTWARE</p>
 					<h3>PC SIMU</h3><br>
-					<img src="images/software.png" />
+					<img src="images/software-pc-simu.png" />
 					<a href="#" target="_blank" class="btn btn-success btn-download"><i class="glyphicon glyphicon-download-alt"></i> DOWNLOAD</a>
 				</div><!-- box-softwares -->
 			</section><!-- SECTION SOFTWARES -->
