--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Acervo materiais educativos</title>
-	<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-	<link href="css/style.css" rel="stylesheet" type="text/css" />
+	<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
+	<link rel="stylesheet" href="css/style.css" type="text/css" />
+	<link rel="stylesheet" href="css/mobile.css">
 	<script src="js/jquery.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	
@@ -15,7 +16,7 @@
 		<div class="row menu ">
 			<nav class="padding-padrao">				
 					<div class="col-md-12">
-						<img src="images/logo-sde.png" />
+						<img src="images/logo-sde.png" class="img-responsive center-block" />
 						<ul>
 							<li><a href="#">SOBRE</a></li>
 							<li><a href="#">CURSOS</a></li>
@@ -30,7 +31,7 @@
 				<h1>MATERIAIS EDUCATIVOS PARA VOCÊ SE QUALIFICAR CADA VEZ MAIS NA ÁREA ELÉTRICA</h1>
 				<!-- <h3>BAIXE GRATUITAMENTE OS MELHORES CONTEÚDOS DA SALA DA ELÉTRICA PARA TURBINAR CADA VEZ MAIS O PODER DO SEU CONHECIMENTO</h3> -->
 				<p>COMPARTILHAR É SE IMPORTAR</p>
-				<ul>
+				<ul class="center-block">
 					<li><a href="#"><img src="images/fb-icon.png" alt=""></a></li>
 					<li><a href="#"><img src="images/linkedin-icon.png" alt=""></a></li>
 					<li><a href="#"><img src="images/googleplus-icon.png" alt=""></a></li>
@@ -38,7 +39,9 @@
 				</ul>
 			</div><!-- MAIN HEADER -->
 		</div>
-
+		</div>
+		
+		<div class="container">
 		<div class="row deptos">
 			<section id="ebooks" class="padding-padrao">
 				<p>E-BOOKS</p>
@@ -55,7 +58,7 @@
 							<p><strong>Versão:</strong> 1.0</p>
 						</div>
 						<div class="col-md-6 content-action">
-							<a href="#" target="_blank" class="btn btn-success">BAIXAR E-BOOK GRÁTIS</a>
+							<a href="https://page.saladaeletrica.com.br/coel1/" target="_blank" class="btn btn-success">BAIXAR E-BOOK GRÁTIS</a>
 						</div>
 					</div>
 				</div><!-- box-ebook -->
@@ -72,7 +75,7 @@
 							<p><strong>Versão:</strong> 1.0</p>
 						</div>
 						<div class="col-md-6 content-action">
-							<a href="#" target="_blank" class="btn btn-success">BAIXAR E-BOOK GRÁTIS</a>
+							<a href="https://page.saladaeletrica.com.br/ebook-grau-de-proteo/" target="_blank" class="btn btn-success">BAIXAR E-BOOK GRÁTIS</a>
 						</div>
 					</div>
 				</div><!-- box-ebook -->
@@ -80,7 +83,7 @@
 				<div class="col-md-6 col-xs-12 box-ebook">
 					<div class="row">
 						<div class="col-md-6">
-							<img src="images/ebook-10-partidas-de-motores.png">
+							<img src="images/ebook-10-partidas-de-motores.png" class="img-responsive" />
 						</div>
 						<div class="col-md-6 content-box-ebook">
 							<h3>AS 10 PARTIDAS DE MOTORES</h3>
@@ -89,7 +92,7 @@
 							<p><strong>Versão:</strong> 1.0</p>
 						</div>
 						<div class="col-md-6 content-action">
-							<a href="#" target="_blank" class="btn btn-success">BAIXAR E-BOOK GRÁTIS</a>
+							<a href="https://page.saladaeletrica.com.br/ebook-10-partidas-de-motores/" target="_blank" class="btn btn-success">BAIXAR E-BOOK GRÁTIS</a>
 						</div>
 					</div>
 				</div><!-- box-ebook -->
@@ -106,7 +109,7 @@
 							<p><strong>Versão:</strong> 1.0</p>
 						</div>
 						<div class="col-md-6 content-action">
-							<a href="#" target="_blank" class="btn btn-success">BAIXAR E-BOOK GRÁTIS</a>
+							<a href="https://page.saladaeletrica.com.br/ebook-cores-de-botoes-e-sinaleiros/" target="_blank" class="btn btn-success">BAIXAR E-BOOK GRÁTIS</a>
 						</div>
 					</div>
 				</div><!-- box-ebook -->
@@ -123,7 +126,7 @@
 							<p><strong>Versão:</strong> 1.0</p>
 						</div>
 						<div class="col-md-6 content-action">
-							<a href="#" target="_blank" class="btn btn-success">BAIXAR E-BOOK GRÁTIS</a>
+							<a href="https://page.saladaeletrica.com.br/velocidade-do-motor-eletrico-trifasico/" target="_blank" class="btn btn-success">BAIXAR E-BOOK GRÁTIS</a>
 						</div>
 					</div>
 				</div><!-- box-ebook -->
@@ -140,7 +143,7 @@
 							<p><strong>Versão:</strong> 1.0</p>
 						</div>
 						<div class="col-md-6 content-action">
-							<a href="#" target="_blank" class="btn btn-success">BAIXAR E-BOOK GRÁTIS</a>
+							<a href="https://page.saladaeletrica.com.br/ebook-inversor-de-frequencia/" target="_blank" class="btn btn-success">BAIXAR E-BOOK GRÁTIS</a>
 						</div>
 					</div>
 				</div><!-- box-ebook -->
@@ -157,7 +160,7 @@
 							<p><strong>Versão:</strong> 1.0</p>
 						</div>
 						<div class="col-md-6 content-action">
-							<a href="#" target="_blank" class="btn btn-success">BAIXAR E-BOOK GRÁTIS</a>
+							<a href="https://page.saladaeletrica.com.br/ebook-nbr5410-instalacoes-eletricas/" target="_blank" class="btn btn-success">BAIXAR E-BOOK GRÁTIS</a>
 						</div>
 					</div>
 				</div><!-- box-ebook -->
@@ -174,7 +177,7 @@
 							<p><strong>Versão:</strong> 1.0</p>
 						</div>
 						<div class="col-md-6 content-action">
-							<a href="#" target="_blank" class="btn btn-success">BAIXAR E-BOOK GRÁTIS</a>
+							<a href="https://page.saladaeletrica.com.br/ebook-dimensionamento-de-eletrodutos/" target="_blank" class="btn btn-success">BAIXAR E-BOOK GRÁTIS</a>
 						</div>
 					</div>
 				</div><!-- box-ebook -->
@@ -191,7 +194,7 @@
 							<p><strong>Versão:</strong> 1.0</p>
 						</div>
 						<div class="col-md-6 content-action">
-							<a href="#" target="_blank" class="btn btn-success">BAIXAR E-BOOK GRÁTIS</a>
+							<a href="https://page.saladaeletrica.com.br/soft-starter/" target="_blank" class="btn btn-success">BAIXAR E-BOOK GRÁTIS</a>
 						</div>
 					</div>
 				</div><!-- box-ebook -->
@@ -208,7 +211,7 @@
 							<p><strong>Versão:</strong> 1.0</p>
 						</div>
 						<div class="col-md-6 content-action">
-							<a href="#" target="_blank" class="btn btn-success">BAIXAR E-BOOK GRÁTIS</a>
+							<a href="https://page.saladaeletrica.com.br/portal-do-parceiro/" target="_blank" class="btn btn-success">BAIXAR E-BOOK GRÁTIS</a>
 						</div>
 					</div>
 				</div><!-- box-ebook -->
@@ -222,30 +225,30 @@
 
 				<div class="col-md-3 box-softwares">
 					<p>SOFTWARE</p>
-					<h3>CADe SIMU 3.0</h3><br>
+					<h3>CADe SIMU 3.0</h3>
 					<img src="images/software-cade-simu-30.png" />
-					<a href="#" target="_blank" class="btn btn-success btn-download"><i class="glyphicon glyphicon-download-alt"></i> DOWNLOAD</a>
+					<a href="https://page.saladaeletrica.com.br/cade-simu-30/" target="_blank" class="btn btn-success btn-download"><i class="glyphicon glyphicon-download-alt"></i> DOWNLOAD</a>
 				</div><!-- box-softwares -->
 
 				<div class="col-md-3 box-softwares">
 					<p>SOFTWARE</p>
 					<h3>PLANILHA DE ORÇAMENTOS</h3>
 					<img src="images/software-planilha-de-orcamentos.png" />
-					<a href="#" target="_blank" class="btn btn-success btn-download"><i class="glyphicon glyphicon-download-alt"></i> DOWNLOAD</a>
+					<a href="http://eletricistaautonomo.com.br/" target="_blank" class="btn btn-success btn-download"><i class="glyphicon glyphicon-download-alt"></i> DOWNLOAD</a>
 				</div><!-- box-softwares -->
 
 				<div class="col-md-3 box-softwares">
 					<p>SOFTWARE</p>
 					<h3>CHECKLIST DO ELETRICISTA</h3>
 					<img src="images/software-check-list.png" />
-					<a href="#" target="_blank" class="btn btn-success btn-download"><i class="glyphicon glyphicon-download-alt"></i> DOWNLOAD</a>
+					<a href="https://eletricasegura.com.br/checklist/" target="_blank" class="btn btn-success btn-download"><i class="glyphicon glyphicon-download-alt"></i> DOWNLOAD</a>
 				</div><!-- box-softwares -->
 
 				<div class="col-md-3 box-softwares">
 					<p>SOFTWARE</p>
-					<h3>PC SIMU</h3><br>
+					<h3>PC SIMU</h3>
 					<img src="images/software-pc-simu.png" />
-					<a href="#" target="_blank" class="btn btn-success btn-download"><i class="glyphicon glyphicon-download-alt"></i> DOWNLOAD</a>
+					<a href="https://page.saladaeletrica.com.br/pc-simu/" target="_blank" class="btn btn-success btn-download"><i class="glyphicon glyphicon-download-alt"></i> DOWNLOAD</a>
 				</div><!-- box-softwares -->
 			</section><!-- SECTION SOFTWARES -->
 		</div>
