Deixando pag responsiva, corrig. links e imgs resp

--- a/index.html
+++ b/index.html
@@ -7,20 +7,24 @@
 	<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
 	<link rel="stylesheet" href="css/style.css" type="text/css" />
 	<link rel="stylesheet" href="css/mobile.css">
-	<script src="js/jquery.js"></script>
+	<script src="js/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
+
+	<!-- SHARE API FACEBOOK -->
 	
 </head>
 <body>
+<div id="fb-root"></div>
+<div id="fb-root"></div>
 	<div class="container-fluid">
 		<div class="row menu ">
 			<nav class="padding-padrao">				
 					<div class="col-md-12">
 						<img src="images/logo-sde.png" class="img-responsive center-block" />
 						<ul>
-							<li><a href="#">SOBRE</a></li>
+							<li><a href="https://www.saladaeletrica.com.br/sobre/" target="_blank">SOBRE</a></li>
 							<li><a href="#">CURSOS</a></li>
-							<li><a href="#">CONTATO</a></li>
+							<li><a href="https://www.saladaeletrica.com.br/contato/" target="_blank">CONTATO</a></li>
 						</ul>
 					</div>
 			</nav><!--MENU-->
@@ -32,177 +36,200 @@
 				<!-- <h3>BAIXE GRATUITAMENTE OS MELHORES CONTEÚDOS DA SALA DA ELÉTRICA PARA TURBINAR CADA VEZ MAIS O PODER DO SEU CONHECIMENTO</h3> -->
 				<p>COMPARTILHAR É SE IMPORTAR</p>
 				<ul class="center-block">
-					<li><a href="#"><img src="images/fb-icon.png" alt=""></a></li>
+				<iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fpage.saladaeletrica.com.br%2Fmateriais-educativos&layout=button_count&size=small&mobile_iframe=true&width=107&height=20&appId" width="107" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+				<script src="//platform.linkedin.com/in.js" type="text/javascript"> lang: pt_BR</script>
+<script type="IN/Share" data-url="https://page.saladaeletrica.com.br/materiais-educativos" data-counter="right"></script>
+<a href="https://twitter.com/share" class="twitter-share-button" data-url="https://page.saladaeletrica.com.br/materiais-educativos" data-lang="pt">Tweetar</a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+<script src="https://apis.google.com/js/platform.js" async defer></script>
+<g:plus action="share" data-href="https://page.saladaeletrica.com.br/materiais-educativos"></g:plus>
+					<!-- <li><a href="#"><img src="images/fb-icon.png" alt=""></a></li>
 					<li><a href="#"><img src="images/linkedin-icon.png" alt=""></a></li>
 					<li><a href="#"><img src="images/googleplus-icon.png" alt=""></a></li>
-					<li><a href="#"><img src="images/twitter-icon.png" alt=""></a></li>
+					<li><a href="#"><img src="images/twitter-icon.png" alt=""></a></li> -->
 				</ul>
 			</div><!-- MAIN HEADER -->
 		</div>
 		</div>
 		
 		<div class="container">
-		<div class="row deptos">
+		<div class="row deptos deptos-ebooks">
 			<section id="ebooks" class="padding-padrao">
 				<p>E-BOOKS</p>
 			
 				<div class="col-md-6 box-ebook col-xs-12">
 					<div class="row">
-						<div class="col-md-6">
-							<img src="images/ebook-partida-estrela-triangulo.png">
+						<div class="col-md-6" style="background:#C6122C;">
+							<img src="images/ebook-partida-estrela-triangulo.png" class="center-block">
 						</div>
 						<div class="col-md-6 teste">
 							<h3>PARTIDA ESTRELA TRIÂNGULO</h3>
 							<p><strong>Por:</strong> Engº Everton Moraes</p>
-							<p><strong>Páginas:</strong> 27 páginas</p>
+							<p><strong>Páginas:</strong> 39 páginas</p>
 							<p><strong>Versão:</strong> 1.0</p>
 						</div>
 						<div class="col-md-6 content-action">
-							<a href="https://page.saladaeletrica.com.br/coel1/" target="_blank" class="btn btn-success">BAIXAR E-BOOK GRÁTIS</a>
+							<a href="https://page.saladaeletrica.com.br/coel1/?sck=MATERIAIS_EDUCATIVOS&utm_source=pagina_materiais_educativos&utm_medium=botao&utm_content=ebook_partida_estrela_triangulo" target="_blank" class="btn btn-success">BAIXAR E-BOOK GRÁTIS</a>
 						</div>
 					</div>
 				</div><!-- box-ebook -->
 
 				<div class="col-md-6 col-xs-12 box-ebook">
 					<div class="row">
-						<div class="col-md-6">
-							<img src="images/ebook-grau-de-protecao.png">
+						<div class="col-md-6" style="background: #255872;">
+							<img src="images/ebook-grau-de-protecao.png" class="center-block">
 						</div>
 						<div class="col-md-6 content-box-ebook">
 							<h3>GRAU DE PROTEÇÃO</h3>
 							<p><strong>Por:</strong> Engº Everton Moraes</p>
-							<p><strong>Páginas:</strong> 27 páginas</p>
+							<p><strong>Páginas:</strong> 11 páginas</p>
 							<p><strong>Versão:</strong> 1.0</p>
 						</div>
 						<div class="col-md-6 content-action">
-							<a href="https://page.saladaeletrica.com.br/ebook-grau-de-proteo/" target="_blank" class="btn btn-success">BAIXAR E-BOOK GRÁTIS</a>
+							<a href="https://page.saladaeletrica.com.br/ebook-grau-de-proteo/?sck=MATERIAIS_EDUCATIVOS&utm_source=pagina_materiais_educativos&utm_medium=botao&utm_content=ebook_grau_de_protecao" target="_blank" class="btn btn-success">BAIXAR E-BOOK GRÁTIS</a>
 						</div>
 					</div>
 				</div><!-- box-ebook -->
 
 				<div class="col-md-6 col-xs-12 box-ebook">
 					<div class="row">
-						<div class="col-md-6">
-							<img src="images/ebook-10-partidas-de-motores.png" class="img-responsive" />
+						<div class="col-md-6" style="background: #255872;">
+							<img src="images/ebook-10-partidas-de-motores.png" class="center-block"/>
 						</div>
 						<div class="col-md-6 content-box-ebook">
 							<h3>AS 10 PARTIDAS DE MOTORES</h3>
 							<p><strong>Por:</strong> Engº Everton Moraes</p>
-							<p><strong>Páginas:</strong> 27 páginas</p>
+							<p><strong>Páginas:</strong> 38 páginas</p>
 							<p><strong>Versão:</strong> 1.0</p>
 						</div>
 						<div class="col-md-6 content-action">
-							<a href="https://page.saladaeletrica.com.br/ebook-10-partidas-de-motores/" target="_blank" class="btn btn-success">BAIXAR E-BOOK GRÁTIS</a>
+							<a href="https://page.saladaeletrica.com.br/ebook-10-partidas-de-motores/?sck=MATERIAIS_EDUCATIVOS&utm_source=pagina_materiais_educativos&utm_medium=botao&utm_content=ebook_10_partidas_de_motores" target="_blank" class="btn btn-success">BAIXAR E-BOOK GRÁTIS</a>
 						</div>
 					</div>
 				</div><!-- box-ebook -->
 
 				<div class="col-md-6 col-xs-12 box-ebook">
 					<div class="row">
-						<div class="col-md-6">
-							<img src="images/ebook-cbs.png">
+						<div class="col-md-6" style="background: #FECC2F;">
+							<img src="images/ebook-cbs.png" class="center-block">
 						</div>
 						<div class="col-md-6 content-box-ebook">
 							<h3>AS 6 CORES DE BOTÕES E SINALEIROS</h3>
 							<p><strong>Por:</strong> Engº Everton Moraes</p>
-							<p><strong>Páginas:</strong> 27 páginas</p>
+							<p><strong>Páginas:</strong> 8 páginas</p>
 							<p><strong>Versão:</strong> 1.0</p>
 						</div>
 						<div class="col-md-6 content-action">
-							<a href="https://page.saladaeletrica.com.br/ebook-cores-de-botoes-e-sinaleiros/" target="_blank" class="btn btn-success">BAIXAR E-BOOK GRÁTIS</a>
+							<a href="https://page.saladaeletrica.com.br/ebook-cores-de-botoes-e-sinaleiros/?sck=MATERIAIS_EDUCATIVOS&utm_source=pagina_materiais_educativos&utm_medium=botao&utm_content=ebook_cores_de_botoes_e_sinaleiros" target="_blank" class="btn btn-success">BAIXAR E-BOOK GRÁTIS</a>
 						</div>
 					</div>
 				</div><!-- box-ebook -->
 
 				<div class="col-md-6 col-xs-12 box-ebook">
 					<div class="row">
-						<div class="col-md-6">
-							<img src="images/ebook-velocidade-do-motor-eletrico-trifasico.png">
+						<div class="col-md-6" style="background: #9B65EF;">
+							<img src="images/ebook-velocidade-do-motor-eletrico-trifasico.png" class="center-block">
 						</div>
 						<div class="col-md-6 content-box-ebook">
 							<h3>VELOCIDADE DO MOTOR ELÉTRICO TRIFÁSICO</h3>
 							<p><strong>Por:</strong> Engº Everton Moraes</p>
-							<p><strong>Páginas:</strong> 27 páginas</p>
+							<p><strong>Páginas:</strong> 7 páginas</p>
 							<p><strong>Versão:</strong> 1.0</p>
 						</div>
 						<div class="col-md-6 content-action">
-							<a href="https://page.saladaeletrica.com.br/velocidade-do-motor-eletrico-trifasico/" target="_blank" class="btn btn-success">BAIXAR E-BOOK GRÁTIS</a>
+							<a href="https://page.saladaeletrica.com.br/velocidade-do-motor-eletrico-trifasico/?sck=MATERIAIS_EDUCATIVOS&utm_source=pagina_materiais_educativos&utm_medium=botao&utm_content=ebook_velocidade_do_motor_eletrico_trifasico" target="_blank" class="btn btn-success">BAIXAR E-BOOK GRÁTIS</a>
 						</div>
 					</div>
 				</div><!-- box-ebook -->
 
 				<div class="col-md-6 col-xs-12 box-ebook">
 					<div class="row">
-						<div class="col-md-6">
-							<img src="images/ebook-inversor-de-frequencia.png">
+						<div class="col-md-6" style="background: #1455A3;">
+							<img src="images/ebook-inversor-de-frequencia.png" class="center-block">
 						</div>
 						<div class="col-md-6 content-box-ebook">
 							<h3>INVERSOR DE FREQUÊNCIA</h3>
 							<p><strong>Por:</strong> Engº Everton Moraes</p>
-							<p><strong>Páginas:</strong> 27 páginas</p>
+							<p><strong>Páginas:</strong> 21 páginas</p>
 							<p><strong>Versão:</strong> 1.0</p>
 						</div>
 						<div class="col-md-6 content-action">
-							<a href="https://page.saladaeletrica.com.br/ebook-inversor-de-frequencia/" target="_blank" class="btn btn-success">BAIXAR E-BOOK GRÁTIS</a>
+							<a href="https://page.saladaeletrica.com.br/ebook-inversor-de-frequencia/?sck=MATERIAIS_EDUCATIVOS&utm_source=pagina_materiais_educativos&utm_medium=botao&utm_content=ebook_inversor_de_frequencia" target="_blank" class="btn btn-success">BAIXAR E-BOOK GRÁTIS</a>
 						</div>
 					</div>
 				</div><!-- box-ebook -->
 
 				<div class="col-md-6 col-xs-12 box-ebook">
 					<div class="row">
-						<div class="col-md-6">
-							<img src="images/ebook-nbr-5410.png">
+						<div class="col-md-6" style="background: #255872;">
+							<img src="images/ebook-nbr-5410.png" class="center-block">
 						</div>
 						<div class="col-md-6 content-box-ebook">
 							<h3>NBR 5410</h3>
 							<p><strong>Por:</strong> Engº Everton Moraes</p>
-							<p><strong>Páginas:</strong> 27 páginas</p>
+							<p><strong>Páginas:</strong> +40 páginas</p>
 							<p><strong>Versão:</strong> 1.0</p>
 						</div>
 						<div class="col-md-6 content-action">
-							<a href="https://page.saladaeletrica.com.br/ebook-nbr5410-instalacoes-eletricas/" target="_blank" class="btn btn-success">BAIXAR E-BOOK GRÁTIS</a>
+							<a href="https://page.saladaeletrica.com.br/ebook-nbr5410-instalacoes-eletricas/?sck=MATERIAIS_EDUCATIVOS&utm_source=pagina_materiais_educativos&utm_medium=botao&utm_content=ebook_nbr_5410" target="_blank" class="btn btn-success">BAIXAR E-BOOK GRÁTIS</a>
 						</div>
 					</div>
 				</div><!-- box-ebook -->
 
 				<div class="col-md-6 col-xs-12 box-ebook">
 					<div class="row">
-						<div class="col-md-6">
-							<img src="images/ebook-dimensionamento-de-eletrodutos.png">
+						<div class="col-md-6" style="background: #72DD72;">
+							<img src="images/ebook-dimensionamento-de-eletrodutos.png" class="center-block">
 						</div>
 						<div class="col-md-6 content-box-ebook">
 							<h3>DIMENSIONAMENTO DE ELETRODUTOS</h3>
 							<p><strong>Por:</strong> Engº Everton Moraes</p>
-							<p><strong>Páginas:</strong> 27 páginas</p>
+							<p><strong>Páginas:</strong> 8 páginas</p>
 							<p><strong>Versão:</strong> 1.0</p>
 						</div>
 						<div class="col-md-6 content-action">
-							<a href="https://page.saladaeletrica.com.br/ebook-dimensionamento-de-eletrodutos/" target="_blank" class="btn btn-success">BAIXAR E-BOOK GRÁTIS</a>
+							<a href="https://page.saladaeletrica.com.br/ebook-dimensionamento-de-eletrodutos/?sck=MATERIAIS_EDUCATIVOS&utm_source=pagina_materiais_educativos&utm_medium=botao&utm_content=ebook_dimensionamento_de_eletrodutos" target="_blank" class="btn btn-success">BAIXAR E-BOOK GRÁTIS</a>
 						</div>
 					</div>
 				</div><!-- box-ebook -->
 
 				<div class="col-md-6 col-xs-12 box-ebook">
 					<div class="row">
-						<div class="col-md-6">
-							<img src="images/ebook-soft-starter.png">
+						<div class="col-md-6" style="background: #3EA5DD;">
+							<img src="images/ebook-soft-starter.png" class="center-block">
 						</div>
 						<div class="col-md-6 content-box-ebook">
 							<h3>SOFT STARTER</h3>
 							<p><strong>Por:</strong> Engº Everton Moraes</p>
-							<p><strong>Páginas:</strong> 27 páginas</p>
+							<p><strong>Páginas:</strong> 8 páginas</p>
 							<p><strong>Versão:</strong> 1.0</p>
 						</div>
 						<div class="col-md-6 content-action">
-							<a href="https://page.saladaeletrica.com.br/soft-starter/" target="_blank" class="btn btn-success">BAIXAR E-BOOK GRÁTIS</a>
+							<a href="https://page.saladaeletrica.com.br/soft-starter/?sck=MATERIAIS_EDUCATIVOS&utm_source=pagina_materiais_educativos&utm_medium=botao&utm_content=ebook_soft_starter" target="_blank" class="btn btn-success">BAIXAR E-BOOK GRÁTIS</a>
 						</div>
 					</div>
 				</div><!-- box-ebook -->
 
 				<div class="col-md-6 col-xs-12 box-ebook">
 					<div class="row">
-						<div class="col-md-6">
-							<img src="images/ebook-3-motivos.png">
+						<div class="col-md-6" style="background: #002539;">
+							<img src="images/ebook-guia-lide.png" class="center-block">
+						</div>
+						<div class="col-md-6 content-box-ebook">
+							<h3>GUIA LIDE (OS 27 SIMBOLOS)</h3>
+							<p><strong>Por:</strong> Engº Everton Moraes</p>
+							<p><strong>Páginas:</strong> 32 páginas</p>
+							<p><strong>Versão:</strong> 1.1</p>
+						</div>
+						<div class="col-md-6 content-action">
+							<a href="https://page.saladaeletrica.com.br/guia-lide-ads/?sck=MATERIAIS_EDUCATIVOS&utm_source=pagina_materiais_educativos&utm_medium=botao&utm_content=ebook_guia_lide" target="_blank" class="btn btn-success">BAIXAR E-BOOK GRÁTIS</a>
+						</div>
+					</div>
+				</div><!-- box-ebook -->
+
+				<div class="col-md-6 col-xs-12 box-ebook">
+					<div class="row">
+						<div class="col-md-6" style="background: #72DD72;">
+							<img src="images/ebook-3-motivos.png" class="center-block">
 						</div>
 						<div class="col-md-6 content-box-ebook">
 							<h3>3 MOTIVOS PORTAL SCHNEIDER</h3>
@@ -211,7 +238,7 @@
 							<p><strong>Versão:</strong> 1.0</p>
 						</div>
 						<div class="col-md-6 content-action">
-							<a href="https://page.saladaeletrica.com.br/portal-do-parceiro/" target="_blank" class="btn btn-success">BAIXAR E-BOOK GRÁTIS</a>
+							<a href="https://page.saladaeletrica.com.br/portal-do-parceiro/?sck=MATERIAIS_EDUCATIVOS&utm_source=pagina_materiais_educativos&utm_medium=botao&utm_content=ebook_portal_do_parceiro" target="_blank" class="btn btn-success">BAIXAR E-BOOK GRÁTIS</a>
 						</div>
 					</div>
 				</div><!-- box-ebook -->
@@ -227,28 +254,28 @@
 					<p>SOFTWARE</p>
 					<h3>CADe SIMU 3.0</h3>
 					<img src="images/software-cade-simu-30.png" />
-					<a href="https://page.saladaeletrica.com.br/cade-simu-30/" target="_blank" class="btn btn-success btn-download"><i class="glyphicon glyphicon-download-alt"></i> DOWNLOAD</a>
+					<a href="https://page.saladaeletrica.com.br/cade-simu-30/?sck=MATERIAIS_EDUCATIVOS&utm_source=pagina_materiais_educativos&utm_medium=botao&utm_content=software_cade_simu_30" target="_blank" class="btn btn-success btn-download center-block"><i class="glyphicon glyphicon-download-alt"></i> DOWNLOAD</a>
 				</div><!-- box-softwares -->
 
 				<div class="col-md-3 box-softwares">
 					<p>SOFTWARE</p>
 					<h3>PLANILHA DE ORÇAMENTOS</h3>
 					<img src="images/software-planilha-de-orcamentos.png" />
-					<a href="http://eletricistaautonomo.com.br/" target="_blank" class="btn btn-success btn-download"><i class="glyphicon glyphicon-download-alt"></i> DOWNLOAD</a>
+					<a href="http://eletricistaautonomo.com.br/?sck=MATERIAIS_EDUCATIVOS&utm_source=pagina_materiais_educativos&utm_medium=botao&utm_content=software_planilha_de_orcamentos" target="_blank" class="btn btn-success btn-download center-block"><i class="glyphicon glyphicon-download-alt"></i> DOWNLOAD</a>
 				</div><!-- box-softwares -->
 
 				<div class="col-md-3 box-softwares">
 					<p>SOFTWARE</p>
 					<h3>CHECKLIST DO ELETRICISTA</h3>
 					<img src="images/software-check-list.png" />
-					<a href="https://eletricasegura.com.br/checklist/" target="_blank" class="btn btn-success btn-download"><i class="glyphicon glyphicon-download-alt"></i> DOWNLOAD</a>
+					<a href="#" target="_blank" class="btn btn-default btn-download center-block disabled"><i class="glyphicon glyphicon-download-alt"></i> EM BREVE</a>
 				</div><!-- box-softwares -->
 
 				<div class="col-md-3 box-softwares">
 					<p>SOFTWARE</p>
 					<h3>PC SIMU</h3>
 					<img src="images/software-pc-simu.png" />
-					<a href="https://page.saladaeletrica.com.br/pc-simu/" target="_blank" class="btn btn-success btn-download"><i class="glyphicon glyphicon-download-alt"></i> DOWNLOAD</a>
+					<a href="https://page.saladaeletrica.com.br/pc-simu/?sck=MATERIAIS_EDUCATIVOS&utm_source=pagina_materiais_educativos&utm_medium=botao&utm_content=software_pc_simu" target="_blank" class="btn btn-success btn-download center-block"><i class="glyphicon glyphicon-download-alt"></i> DOWNLOAD</a>
 				</div><!-- box-softwares -->
 			</section><!-- SECTION SOFTWARES -->
 		</div>
@@ -257,36 +284,28 @@
 			<section id="webinars" class="padding-padrao">
 				<p>WEBINAR</p>
 
-				<div class="col-md-1"></div>
-				<div class="col-md-5 box-webinars">
-					<img src="images/webinar.png" />
-					<h3>ASSUNTO DO WEBINAR</h3>
+				<div class="col-md-3"></div>
+				<div class="col-md-6 box-webinars">
+					<img src="images/webinar-partidas.png" />
+					<h3>PARTIDA ELETRÔNICA DE MOTORES- SOFT STARTER E INVERSOR DE FREQUÊNCIA</h3>
 					<p>Por: Engº Everton Moraes</p>
 					<div class="action-align">
-						<a href="#" target="_blank" class="btn btn-success">ASSISTIR GRATUITAMENTE</a>
+						<a href="https://app.webinarjam.net/register/14147/e89dc1037c" target="_blank" class="btn btn-success center-block">ASSISTIR GRATUITAMENTE</a>
 					</div>
 				</div><!-- box-webinars -->
 
-				<div class="col-md-5 box-webinars">
-					<img src="images/webinar.png" />
-					<h3>ASSUNTO DO WEBINAR</h3>
-					<p>Por: Engº Everton Moraes</p>
-					<div class="action-align">
-						<a href="#" target="_blank" class="btn btn-success">ASSISTIR GRATUITAMENTE</a>
-					</div>
-				</div><!-- box-webinars -->
-				<div class="col-md-1"></div>
+				<div class="col-md-3"></div>
 			</section><!-- SECTION WEBINAR -->
 		</div>
 
 	</div><!-- CONTAINER FLUID -->
 	<div class="footer">
-		<img src="images/logo-sde.png" />
+		<img src="images/logo-sde.png" class="img-responsive center-block"/>
 		<ul>
-			<li><a href="#"><img src="images/fb-icon.png" alt=""></a></li>
-			<li><a href="#"><img src="images/linkedin-icon.png" alt=""></a></li>
-			<li><a href="#"><img src="images/googleplus-icon.png" alt=""></a></li>
-			<li><a href="#"><img src="images/twitter-icon.png" alt=""></a></li>
+			<li><a href="https://page.saladaeletrica.com.br/termos-de-uso/">Termos de Uso</a></li>
+			<li><a href="https://page.saladaeletrica.com.br/politica-de-privacidade/">Política de Privacidade</a></li>
+			<li><a href="https://page.saladaeletrica.com.br/disclaimer/">Aviso Legal</a></li>
+			<li><a href="http://www.saladaeletrica.com.br/contato/">Contato</a></li>
 		</ul>
 	</div>
 </body>
