Adicionando link para checklist

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 					<p>SOFTWARE</p>
 					<h3>CHECKLIST DO ELETRICISTA</h3>
 					<img src="images/software-check-list.png" />
-					<a href="#" target="_blank" class="btn btn-default btn-download center-block disabled"><i class="glyphicon glyphicon-download-alt"></i> EM BREVE</a>
+					<a href="https://eletricasegura.com.br/checklist/?sck=MATERIAIS_EDUCATIVOS&utm_source=pagina_materiais_educativos&utm_medium=botao&utm_content=software_checklist_do_eletricista" target="_blank" class="btn btn-success btn-download center-block"><i class="glyphicon glyphicon-send"></i> ACESSAR</a>
 				</div><!-- box-softwares -->
 
 				<div class="col-md-3 box-softwares">
