Alterando nome ebook guia lide

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 							<img src="images/ebook-guia-lide.png" class="center-block">
 						</div>
 						<div class="col-md-6 content-box-ebook">
-							<h3>GUIA LIDE (OS 27 SIMBOLOS)</h3>
+							<h3>GUIA LIDE (OS 31 SÍMBOLOS)</h3>
 							<p><strong>Por:</strong> Engº Everton Moraes</p>
 							<p><strong>Páginas:</strong> 32 páginas</p>
 							<p><strong>Versão:</strong> 1.1</p>
