Adiconando LINK ao menu CURSOS

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						<img src="images/logo-sde.png" class="img-responsive center-block" />
 						<ul>
 							<li><a href="https://www.saladaeletrica.com.br/sobre/" target="_blank">SOBRE</a></li>
-							<li><a href="#">CURSOS</a></li>
+							<li><a href="https://page.saladaeletrica.com.br/cursos/">CURSOS</a></li>
 							<li><a href="https://www.saladaeletrica.com.br/contato/" target="_blank">CONTATO</a></li>
 						</ul>
 					</div>
