Add menu cursos novamente

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 						<ul>
 							<li><a href="https://www.saladaeletrica.com.br/sobre/" target="_blank">SOBRE</a></li>
 							<li><a href="https://page.saladaeletrica.com.br/cursos/">CURSOS</a></li>
+							<li><a href="https://www.saladaeletrica.com.br/" target="_blank">BLOG</a></li>
 							<li><a href="https://www.saladaeletrica.com.br/contato/" target="_blank">CONTATO</a></li>
 						</ul>
 					</div>
